Finish visualization of game

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="style_reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
+    <div class="container">
+        <p class="player1-score"></p>
+        <p class="player2-score"></p>
+        <p class="turn"></p>
+        <div class="board">
+        </div>
+    </div>
+
+    <dialog>
+        <p class="player-win"></p>
+        <p>Do you wanna a new game?</p>
+        <button class="new-game">Start a new game</button>
+    </dialog>
+
     <script src="script.js"></script>
 </body>
 </html>
